add api methods
